# Zappy

./: .gitignore  Makefile  README.md  client.py  conda-lock.default.yml  conda-project.yml  zappy_ai
.github/: CODEOWNERS
Zappy_IA_Report/: Rapport_IA.md
docs/: protocol.md
gui/: CMakeLists.txt  Makefile  main.cpp
gui/entities/: Tile.hpp
gui/include/: Error.hpp  Macro.hpp  ParsingArgs.hpp
gui/src/: Error.cpp  ParsingArgs.cpp  main.cpp
gui/src/commandHandler/: CommandHandler.cpp  CommandHandler.hpp
gui/src/docs/html/: _args_parser_8cpp.html  _args_parser_8hpp_source.html  _command_handler_8hpp_source.html  _command_parser_8cpp.html  _egg_8hpp.js  _game_state_8hpp.js  _incantations_effect_8hpp_source.html  _map_8hpp.html  _orientation_8hpp.js  _orientation_8hpp_source.html  _tile_effects_8cpp.html  classgui_1_1_game_engine.html  classgui_1_1_game_engine.js  classhandlecommand_1_1_command_handler-members.html  classhandlecommand_1_1_command_handler.html  classnetwork_1_1_server_communication-members.html  classnetwork_1_1_server_communication.js  classparser_1_1_command_parser-members.html  classparser_1_1_command_parser.js  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_d1515aa7129e5048add9170fe38df802.js  doxygen.css  files.html  functions_c.html  functions_g.html  functions_p.html  functions_v.html  globals_eval.html  main_8cpp.html  main_8cpp.js  namespaceparser.js  navtreeindex1.js  structgui_1_1_egg-members.html  structgui_1_1_egg.js  structgui_1_1_game_state-members.html  structgui_1_1_game_state.html  structgui_1_1_map-members.html  structgui_1_1_player.js  structgui_1_1_tile_selection-members.html  structgui_1_1_tile_selection.html  (+18 more)
gui/src/docs/html/search/: all_0.js  all_14.js  all_5.js  all_d.js  classes_1.js  classes_9.js  defines_2.js  defines_4.js  defines_6.js  defines_7.js  enumvalues_3.js  enumvalues_5.js  enumvalues_a.js  files_1.js  files_4.js  functions_1.js  functions_2.js  functions_8.js  functions_a.js  functions_b.js  functions_e.js  variables_1.js  variables_10.js  variables_3.js  variables_6.js  variables_9.js  variables_b.js
gui/src/docs/latex/: _args_parser_8hpp_source.tex  _command_parser_8hpp.tex  _command_parser_8hpp_source.tex  _game_engine_8hpp.tex  _game_engine_8hpp_source.tex  _game_state_8hpp_source.tex  _orientation_8hpp.tex  _server_communication_8hpp.tex  _tile_effects_8cpp.tex  _tile_effects_8hpp.tex  classgui_1_1_game_engine.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8408bad1c8b66572738be7dc5ba73ab6.tex  dir_d1515aa7129e5048add9170fe38df802.tex  dir_d691984d1d74be3b164cee16192654be.tex  files.tex  namespaces.tex  structgui_1_1_egg.tex  structgui_1_1_incantation_effect.tex  structgui_1_1_tile.tex  structparser_1_1_broadcast_event.tex  structparser_1_1_egg_hatch.tex  structparser_1_1_incantation_end.tex  structparser_1_1_map_size.tex  structparser_1_1_player_inventory.tex  structparser_1_1_tile_update.tex
gui/src/engine/: GameEngine.cpp  GameEngine.hpp
gui/src/entities/: Egg.hpp  GameState.cpp  GameState.hpp  IncantationsEffect.hpp  Map.cpp  Map.hpp  Orientation.hpp  Player.hpp  Tile.cpp  Tile.hpp  TileEffects.cpp  TileEffects.hpp
gui/src/error/: Error.cpp
gui/src/gameEngine/: GameEngine.cpp  GameEngine.hpp  drawText3D.cpp
gui/src/handleCommand/: CommandHandler.cpp  CommandHandler.hpp
gui/src/header/: rlights.h
gui/src/parser/: ArgsParser.cpp  ArgsParser.hpp  CommandParser.cpp  CommandParser.hpp  Parser.cpp
gui/src/raylib/: Raylib.cpp  Raylib.hpp
gui/src/server/: ServerCommunication.cpp  ServerCommunication.hpp
ia/: Doxyfile  Makefile  zappy_ai
(+1270 files in other folders)
